chore: fix no show rows in permissions

--- a/dotCMS/src/main/webapp/html/portlet/ext/common/edit_permissions_accordion_contentType_entry.html
+++ b/dotCMS/src/main/webapp/html/portlet/ext/common/edit_permissions_accordion_contentType_entry.html
@@ -1,4 +1,4 @@
-<table class="accordionEntry" style="margin-top:-10px;">
+<table class="accordionEntry">
 
     <tr>
         <th style="padding-left:20px;" class="permissionType">${contentWillInherit} (Children)</th>
